--- a/AgeOfEmpires/AgeOfEmpires.csproj
+++ b/AgeOfEmpires/AgeOfEmpires.csproj
@@ -10,6 +10,8 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Content\Content.mgcb" />
+    <None Remove="Content\editedTilesSet.tmx" />
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
   </ItemGroup>
@@ -18,7 +20,7 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
+    <ApplicationDefinition Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
@@ -42,5 +44,11 @@
   <ItemGroup>
     <Folder Include="Content\bin\DesktopGL\Content\" />
     <Folder Include="maps\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="Content\editedTilesSet.tmx" />
+  </ItemGroup>
+  <ItemGroup>
+    <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
 </Project>
