Unit creation added
-spritesheets needs to be checked
-peasant is still blinking
-new map needed to avoid small space
-resource calculation needs to be done
(e.g. creating unit takes x space x food etc)

--- a/AgeOfEmpires/AgeOfEmpires.csproj
+++ b/AgeOfEmpires/AgeOfEmpires.csproj
@@ -10,6 +10,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Characters\**" />
+    <EmbeddedResource Remove="Characters\**" />
+    <None Remove="Characters\**" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Content\Content.mgcb" />
     <None Remove="Content\editedTilesSet.tmx" />
     <None Remove="Icon.ico" />
@@ -24,10 +29,6 @@
   </ItemGroup>
   <ItemGroup>
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Characters\" />
-    <Folder Include="maps\" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="Content\editedTilesSet.tmx" />
