--- a/AgeOfEmpires/AgeOfEmpires.csproj
+++ b/AgeOfEmpires/AgeOfEmpires.csproj
@@ -49,4 +49,9 @@
     <PackageReference Include="MonoGame.Extended.Tweening" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Content\RedPeasant.sf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
